Added jupyter journal to generate what-if files and PV ICE files to generate waste.

--- a/PV_Recycling_Plant/RELOG_simulation/input/Generate What-If Scenarios.ipynb
+++ b/PV_Recycling_Plant/RELOG_simulation/input/Generate What-If Scenarios.ipynb
@@ -27,7 +27,7 @@
     "with open(f\"{problem}/InputPipelineData.json\") as infile:\n",
     "    case = json.load(infile)\n",
     "    t = case[\"parameters\"][\"time horizon (years)\"]\n",
-    "    for cap in [0, 0.25, 0.5, 1, 2, 4]:\n",
+    "    for cap in [0.25, 0.5, 1, 2, 4]: # Do not ad cap '0' or the HPC will not find a solution for the '0' cap scenarios.\n",
     "        for cost in [0.0, 50, 100, 150, 300, 600]:\n",
     "            for plant in case[\"plants\"].values():\n",
     "                for loc in plant[\"locations\"].values():\n",
