--- a/PV_ICE_waste_calculations/PVICE & Relog - PCA baselines for Si & CdTe & MassFlows Calculations.ipynb
+++ b/PV_ICE_waste_calculations/PVICE & Relog - PCA baselines for Si & CdTe & MassFlows Calculations.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your simulation will be stored in /Users/mmendez/Documents/Postdoc/PV_ICE/TEMP\n"
+      "Your simulation will be stored in /Users/mmendez/Documents/Postdoc/Software_dev/PV_ICE/TEMP\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "'v0.2.0+297.ge7c2f03.dirty'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input file is stored in /Users/mmendez/Documents/Postdoc/Software_dev/December Core Scenarios ReEDS Outputs Solar Futures v3a.xlsx\n"
+      "Input file is stored in /Users/mmendez/Documents/Postdoc/December Core Scenarios ReEDS Outputs Solar Futures v3a.xlsx\n"
      ]
     }
    ],
    "source": [
-    "reedsFile = str(Path().resolve().parent.parent / 'December Core Scenarios ReEDS Outputs Solar Futures v3a.xlsx')\n",
+    "reedsFile = str(Path().resolve().parent.parent.parent.parent / 'December Core Scenarios ReEDS Outputs Solar Futures v3a.xlsx')\n",
     "print (\"Input file is stored in %s\" % reedsFile)"
    ]
   },
