reorganized and cleanup

--- a/PV_ICE_waste_calculations/PVICE & Relog - PCA baselines for Si & CdTe & MassFlows Calculations.ipynb
+++ b/PV_ICE_waste_calculations/PVICE & Relog - PCA baselines for Si & CdTe & MassFlows Calculations.ipynb
@@ -792,8 +792,7 @@
     "\n",
     "sparkplotfolder = os.path.join(testfolder, 'SPARKPLOTS')\n",
     "if not os.path.exists(sparkplotfolder):\n",
-    "    os.makedirs(sparkplotfolder)\n",
-    "sparkplot = True"
+    "    os.makedirs(sparkplotfolder)\n"
    ]
   },
   {
@@ -803,6 +802,16 @@
    "outputs": [],
    "source": [
     "plt.rcParams.update({'font.size': 8})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparkplot = True\n",
+    "reorganize = True"
    ]
   },
   {
@@ -873,11 +882,13 @@
     "    B['new_Installed_Capacity_[MW]'] = B['new_Installed_Capacity_[MW]'] * 1000   # ReEDS file is in GW.\n",
     "    # Sort Ascending 2022 to 2035 new_Installed_Capacity_[MW]\n",
     "    # Sort Descending 2035 to 2050 new_Installed_Capacity_[MW]\n",
-    "    sortedB = (list(B.iloc[0:12]['new_Installed_Capacity_[MW]'].values) + list(B.iloc[12:25]['new_Installed_Capacity_[MW]'].sort_values().values)\n",
-    "    +list(B.iloc[25::]['new_Installed_Capacity_[MW]'].sort_values(ascending=False).values))\n",
-    "    sortedBdf = pd.DataFrame(sortedB, index = A.index, columns =['new_Installed_Capacity_[MW]'])\n",
+    "    if reorganize:\n",
+    "        sortedB = (list(B.iloc[0:12]['new_Installed_Capacity_[MW]'].values) + list(B.iloc[12:25]['new_Installed_Capacity_[MW]'].sort_values().values)\n",
+    "        +list(B.iloc[25::]['new_Installed_Capacity_[MW]'].sort_values(ascending=False).values))\n",
+    "        sortedBdf = pd.DataFrame(sortedB, index = A.index, columns =['new_Installed_Capacity_[MW]'])\n",
+    "        B = sortedBdf.reindex(A.index)\n",
     "    # Add other columns\n",
-    "    B = pd.concat([sortedBdf.reindex(A.index), baseline.reindex(A.index)], axis=1)\n",
+    "    B = pd.concat([B, baseline.reindex(A.index)], axis=1)\n",
     "   \n",
     "    header = row11 + '\\n' + row22 + '\\n'\n",
     "    \n",
@@ -905,11 +916,13 @@
     "    B = A.copy()\n",
     "    B['new_Installed_Capacity_[MW]'] = B['new_Installed_Capacity_[MW]'] * marketshare['CdTe Market Share'].values\n",
     "    B['new_Installed_Capacity_[MW]'] = B['new_Installed_Capacity_[MW]'] * 1000   # ReEDS file is in GW.\n",
-    "    sortedB = (list(B.iloc[0:12]['new_Installed_Capacity_[MW]'].values) + list(B.iloc[12:25]['new_Installed_Capacity_[MW]'].sort_values().values)\n",
-    "    +list(B.iloc[25::]['new_Installed_Capacity_[MW]'].sort_values(ascending=False).values))\n",
-    "    sortedBdf = pd.DataFrame(sortedB, index = A.index, columns =['new_Installed_Capacity_[MW]'])\n",
+    "    if reorganize:\n",
+    "        sortedB = (list(B.iloc[0:12]['new_Installed_Capacity_[MW]'].values) + list(B.iloc[12:25]['new_Installed_Capacity_[MW]'].sort_values().values)\n",
+    "        +list(B.iloc[25::]['new_Installed_Capacity_[MW]'].sort_values(ascending=False).values))\n",
+    "        sortedBdf = pd.DataFrame(sortedB, index = A.index, columns =['new_Installed_Capacity_[MW]'])\n",
+    "            B = sortedBdf.reindex(A.index)\n",
     "    # Add other columns\n",
-    "    B = pd.concat([sortedBdf.reindex(A.index), baseline.reindex(A.index)], axis=1)\n",
+    "    B = pd.concat([B, baseline.reindex(A.index)], axis=1)\n",
     "    \n",
     "    with open(filetitle, 'w', newline='') as ict:\n",
     "    # Write the header lines, including the index variable for\n",
