Testing method 3, and making changes on the initial amount name generation

--- a/1_PV_ICE_waste_calculations/2 - PVICE & RELOG - MassFlows Calculations.ipynb
+++ b/1_PV_ICE_waste_calculations/2 - PVICE & RELOG - MassFlows Calculations.ipynb
@@ -129,9 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# method = 'Method1' # Raw waste creation with the weird ReEDS \n",
-    "# method = 'Method2' # Ordered waste \n",
-    "method = 'Method3' # Uses the cummulative capacity between 2021 to 2035 and 2034 to 2050 to create a logarithmic growth of waste (it is still on the works)"
+    "pv_ice_simulations = ['Method1', 'Method2','Method3']"
    ]
   },
   {
@@ -462,7 +460,7 @@
     "\n",
     "for jj in range (0, len(PCAs)): \n",
     "    filetitle = SFscenarios[i]+'_'+PCAs[jj]+'.csv'\n",
-    "    filetitle = os.path.join(testfolder, f'PCAs_RELOG_{method}', filetitle)    \n",
+    "    filetitle = os.path.join(testfolder, f'PCAs_RELOG_{pv_ice_simulations[2]}', filetitle)    # Change this number to the simulation you want to run\n",
     "    r1.createScenario(name=PCAs[jj], massmodulefile=filetitle)\n",
     "    r1.scenario[PCAs[jj]].addMaterials(['glass', 'silicon', 'silver', 'copper', 'aluminium_frames', 'encapsulant', 'backsheet'], baselinefolder=baselinefolder)\n",
     "    # All -- but these where not included in the Reeds initial study as we didnt have encapsulant or backsheet\n",
@@ -477,7 +475,7 @@
     "\n",
     "for jj in range (0, len(PCAs)): \n",
     "    filetitle = SFscenarios[i]+'_'+PCAs[jj]+'.csv'\n",
-    "    filetitle = os.path.join(testfolder, f'PCAs_RELOG_{method}', filetitle)        \n",
+    "    filetitle = os.path.join(testfolder, f'PCAs_RELOG_{pv_ice_simulations[2]}', filetitle)        \n",
     "    r2.createScenario(name=PCAs[jj], massmodulefile=filetitle)\n",
     "    # MAC Add here the materials you want.\n",
     "    r2.scenario[PCAs[jj]].addMaterials(['cadmium', 'tellurium', 'glass_cdte', 'aluminium_frames_cdte', 'encapsulant_cdte', 'copper_cdte'], baselinefolder=baselinefolder)\n",
@@ -3097,7 +3095,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "eec0c18f-333d-48e4-b8cf-822e833f9ce9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3157,7 +3158,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "cbc7f272-2b87-4fe1-8a3d-8f0919e57481",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -6184,9 +6188,9 @@
    "outputs": [],
    "source": [
     "filter_colc = [col for col in datay if col.startswith('WasteEOL')]\n",
-    "datay[filter_colc].to_csv('PVICE_RELOG_PCA_cSi_WasteEOL.csv')\n",
+    "datay[filter_colc].to_csv(f'PVICE_RELOG_PCA_cSi_WasteEOL_{pv_ice_simulations[2]}.csv')\n",
     "filter_colc = [col for col in datay_CdTe if col.startswith('WasteEOL')]\n",
-    "datay_CdTe[filter_colc].to_csv('PVICE_RELOG_PCA_CdTe_WasteEOL.csv')"
+    "datay_CdTe[filter_colc].to_csv(f'PVICE_RELOG_PCA_CdTe_WasteEOL_{pv_ice_simulations[2]}.csv')"
    ]
   },
   {
