--- a/3_RELOG_simulation/0_Folder_generation.ipynb
+++ b/3_RELOG_simulation/0_Folder_generation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 129,
    "id": "098a1a46-5e76-4858-920a-6d8bd2d21506",
    "metadata": {},
    "outputs": [],
@@ -53,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 130,
    "id": "981be564-d465-4e0b-9f68-c4b1497528ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "date = datetime.today().strftime('%Y%m%d')\n",
-    "simulation_name = f'{date}_CASE0_v1' # This line is the only one that needs to be changed. CASE0 is gthe name and v1 is the version\n",
+    "simulation_name = f'{date}_CASE0_v2' # This line is the only one that needs to be changed. CASE0 is gthe name and v1 is the version\n",
     "simulation_whatif = 'what-if_' + simulation_name"
    ]
   },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 131,
    "id": "2fec549a-7206-4d5f-98d2-fe6b2ffc376d",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 132,
    "id": "1e2516d1-1e55-4aa8-9ece-6374628f8974",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 133,
    "id": "4686affb-3fde-4cca-9bca-531979ea8278",
    "metadata": {},
    "outputs": [],
@@ -108,17 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 134,
    "id": "b3abd86c-8f80-43cb-946a-ab98f1a00769",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230222_CASE0_v1'"
+       "'/Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230223_CASE0_v2'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 135,
    "id": "3a2d2d95-8d72-40da-9f2c-cd5e1d7bc1e8",
    "metadata": {},
    "outputs": [
@@ -137,12 +137,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/20230222_CASE0_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/what-if_20230222_CASE0_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/20230222_CASE0_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/what-if_20230222_CASE0_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/20230222_CASE0_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230222_CASE0_v1 has been created!\n"
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/20230223_CASE0_v2 has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/what-if_20230223_CASE0_v2 has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/20230223_CASE0_v2 has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/what-if_20230223_CASE0_v2 has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/20230223_CASE0_v2 has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230223_CASE0_v2 has been created!\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 136,
    "id": "f3525200-b839-401e-b403-f2cc968cf85b",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 137,
    "id": "e52c1fef-77da-4d38-9285-e39796e549c2",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 138,
    "id": "a57a19de-3a96-41a1-b20d-88f772660f0e",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 139,
    "id": "cb943601-aaa9-48a1-92e9-28480c568a36",
    "metadata": {},
    "outputs": [],
@@ -245,16 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 140,
    "id": "a89c88cb-b2fc-4436-bee9-c82052486226",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The path for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/20230222_CASE0_v1 exists! You may continue to the next step.\n",
-      "The path for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/what-if_20230222_CASE0_v1 exists! You may continue to the next step.\n"
+     "ename": "NameError",
+     "evalue": "name 'PathNotFoundError' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [140], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe path for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msimulation_folders[files]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m exists! You may continue to the next step.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[43mPathNotFoundError\u001b[49m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe path \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minput_solver_file_location\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m does not exist, please generate the necessary folders using the 0_Folder_generation.ipynb found in 3_RELOG_simulation.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'PathNotFoundError' is not defined"
      ]
     }
    ],
