fixed CandidateLocations folder (it is hidden from Github until further notice!) also added the new column initial capacity (tonne)

--- a/1_PV_ICE_waste_calculations/2 - PVICE & RELOG - MassFlows Calculations.ipynb
+++ b/1_PV_ICE_waste_calculations/2 - PVICE & RELOG - MassFlows Calculations.ipynb
@@ -124,106 +124,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5aa19785-b9cd-4453-b8dd-d15c041c44f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pv_ice_simulations = 'fsdf'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1822efd9-15ac-4863-bb84-a2faed0ca6ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "method_list = ['Method1', 'Method2', 'Method3']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b541cdac-47d5-4ce8-90bc-ce1672df95b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pv_ice_simulations in method_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3050291b-f80d-4871-a6f1-66d2aa540c3f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "cf92be8e-cfa9-4508-89f4-4ead033b1ee0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(...)? (1904178949.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [7]\u001b[0;36m\u001b[0m\n\u001b[0;31m    print \"Choose one of the following methods: Method1, Method2 or Method3.\"\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(...)?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose one of the following methods: Method1, Method2 or Method3.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Input method not in the list, please choose one of the following methods: Method1, Method2 or Method3. sdf\n",
+      "Input method not in the list, please choose one of the following methods: Method1, Method2 or Method3. dsf\n",
+      "Input method not in the list, please choose one of the following methods: Method1, Method2 or Method3. Method1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have chosen Method1.\n"
      ]
     }
    ],
    "source": [
-    "print(\"Choose one of the following methods: Method1, Method2 or Method3.\"\n",
+    "method_list = ['Method1', 'Method2', 'Method3']\n",
+    "print(\"Choose one of the following methods: Method1, Method2 or Method3.\")\n",
     "pv_ice_simulations = None\n",
     "while pv_ice_simulations not in {\"Method1\", \"Method2\", \"Method3\"}:\n",
-    "    pv_ice_simulations = input('Input method not in the list, please choose one of the following methods: Method1, Method2 or Method3.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "e3ea4e16-838e-477f-96dd-a95ab61d0e18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "method_list = ['Method1', 'Method2', 'Method3']\n",
-    "while True:\n",
-    "    try:\n",
-    "        pv_ice_simulations = input('Choose one of the following methods: Method1, Method2 or Method3.')\n",
-    "    except ValueError:\n",
-    "        print('Input method not in the list, please choose one of the following methods: Method1, Method2 or Method3.')\n",
-    "        continue\n",
-    "    else:\n",
-    "        print('You have chosen {}.'.format(pv_ice_simulations))\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99ed9387-77ab-4d2a-8db4-f57291967203",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "method_list = ['Method1', 'Method2', 'Method3']\n",
-    "pv_ice_simulations = input('Choose one of the following methods: Method1, Method2 or Method3.')\n",
-    "if pv_ice_simulations not in method_list:\n",
-    "    while False:\n",
-    "        pv_ice_simulations = input('Input method not in the list, please choose one of the following methods: Method1, Method2 or Method3.')\n",
+    "    pv_ice_simulations = input('Input method not in the list, please choose one of the following methods: Method1, Method2 or Method3.')\n",
     "print('You have chosen {}.'.format(pv_ice_simulations))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b1f07c4-00a5-4c3c-be62-80131623bdcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pv_ice_simulations"
    ]
   },
   {
