--- a/2_data_preparation/data_preprocess_1.ipynb
+++ b/2_data_preparation/data_preprocess_1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f079c6c9-cc2f-40ac-84cc-42ab867771af",
    "metadata": {},
    "outputs": [],
@@ -2526,13 +2526,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 4,
    "id": "f75a8393-e78b-4298-a7ba-223b67574f0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "cwd = os.getcwd()\n",
-    "cl_nwike_battery = pd.read_csv(os.path.join(cwd, 'RELOG_import_data', 'Candidate locations - Battery Project.csv'))"
+    "cl_nwike_battery = pd.read_csv(os.path.join(cwd, 'RELOG_import_data', 'CandidateLocations','Candidate locations - Battery Project.csv'))"
    ]
   },
   {
@@ -3774,7 +3774,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cadidate_loc = pd.read_csv(os.path.join('RELOG_import_data', 'CandidateLocations_op_NM.csv'))"
+    "cadidate_loc = pd.read_csv(os.path.join('RELOG_import_data', 'CandidateLocations' , 'CandidateLocations_op_NM.csv'))"
    ]
   },
   {
@@ -4492,7 +4492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cadidate_loc_2 = pd.read_csv(os.path.join('RELOG_import_data', 'Candidate locations - Battery Project.csv'))"
+    "cadidate_loc_2 = pd.read_csv(os.path.join('RELOG_import_data', 'CandidateLocations','Candidate locations - Battery Project.csv'))"
    ]
   },
   {
@@ -4555,7 +4555,7 @@
    },
    "outputs": [],
    "source": [
-    "candidate_locations = pd.DataFrame(columns=['name', 'latitude (deg)', 'longitude (deg)', 'area cost factor'])                "
+    "candidate_locations = pd.DataFrame(columns=['name', 'latitude (deg)', 'longitude (deg)', 'initial capacity (tonne)','area cost factor'])                "
    ]
   },
   {
