--- a/1_PV_ICE_waste_calculations/1 - PVICE & RELOG - PCA baselines for Si & CdTe.ipynb
+++ b/1_PV_ICE_waste_calculations/1 - PVICE & RELOG - PCA baselines for Si & CdTe.ipynb
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,9 +1166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mod_eff_raw' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#generae a dataset for the area in between\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m mod_eff_late \u001b[38;5;241m=\u001b[39m \u001b[43mmod_eff_raw\u001b[49m\u001b[38;5;241m.\u001b[39mloc[(mod_eff_raw\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2020\u001b[39m)]\n\u001b[1;32m      4\u001b[0m y_dummy \u001b[38;5;241m=\u001b[39m power_law(mod_eff_late\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2019\u001b[39m, mod_eff_late[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmod_eff\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m2020\u001b[39m], \u001b[38;5;241m0.065\u001b[39m) \u001b[38;5;66;03m#17.9\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#played around with the exponential until y_dummy[31] closely matched projected 25.06% value. CITE\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mod_eff_raw' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#generae a dataset for the area in between\n",
     "mod_eff_late = mod_eff_raw.loc[(mod_eff_raw.index>=2020)]\n",
@@ -1183,13 +1195,20 @@
     "plt.plot(mod_eff_late)\n",
     "#mod_eff_late.to_csv(cwd+'/../../../PV_ICE/baselines/SupportingMaterial/output_module_eff_perovskite.csv', index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PV_ICE",
    "language": "python",
-   "name": "python3"
+   "name": "pv_ice"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1201,7 +1220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
