More simulation study

--- a/3_RELOG_simulation/1_Submit Optimization Problem.ipynb
+++ b/3_RELOG_simulation/1_Submit Optimization Problem.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -42,22 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"20230306_CASE0_Manufacturing_v1\""
+       "\"20230309_storage-only-plant-example\""
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "problem = \"20230306_CASE0_Manufacturing_v1\""
+    "problem = \"20230309_storage-only-plant-example\""
    ]
   },
   {
@@ -76,28 +76,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m started timer at: 2023-03-06T15:31:14.135\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mReading input/20230306_CASE0_Manufacturing_v1/case.json...\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m         134 collection centers\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m         156 candidate plant locations\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m started timer at: 2023-03-10T09:23:26.371\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mReading input/20230309_storage-only-plant-example/case.json...\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m           1 collection centers\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m           2 candidate plant locations\n",
       "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mBuilding graph...\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m              26 time periods\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m             156 process nodes\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m             156 shipping nodes (plant)\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m             134 shipping nodes (collection)\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m           21060 arcs\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m           2 time periods\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m           2 process nodes\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m           1 shipping nodes (plant)\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m           1 shipping nodes (collection)\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m           4 arcs\n",
       "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mBuilding optimization model...\n",
       "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mOptimizing MILP...\n",
+      "Running HiGHS 1.5.1 [date: 1970-01-01, git hash: 93f1876e4]\n",
+      "Copyright (c) 2023 HiGHS under MIT licence terms\n",
+      "Presolving model\n",
+      "26 rows, 22 cols, 60 nonzeros\n",
+      "16 rows, 14 cols, 39 nonzeros\n",
+      "10 rows, 9 cols, 22 nonzeros\n",
+      "7 rows, 7 cols, 16 nonzeros\n",
+      "6 rows, 5 cols, 13 nonzeros\n",
+      "Objective function is integral with scale 0.002\n",
+      "\n",
+      "Solving MIP model with:\n",
+      "   6 rows\n",
+      "   5 cols (2 binary, 0 integer, 0 implied int., 3 continuous)\n",
+      "   13 nonzeros\n",
+      "\n",
+      "        Nodes      |    B&B Tree     |            Objective Bounds              |  Dynamic Constraints |       Work      \n",
+      "     Proc. InQueue |  Leaves   Expl. | BestBound       BestSol              Gap |   Cuts   InLp Confl. | LpIters     Time\n",
+      "\n",
+      "         0       0         0   0.00%   5600            inf                  inf        0      0      0         0     0.0s\n",
+      "\n",
+      "Solving report\n",
+      "  Status            Optimal\n",
+      "  Primal bound      5600\n",
+      "  Dual bound        5600\n",
+      "  Gap               0% (tolerance: 0.01%)\n",
+      "  Solution status   feasible\n",
+      "                    5600 (objective)\n",
+      "                    0 (bound viol.)\n",
+      "                    0 (int. viol.)\n",
+      "                    0 (row viol.)\n",
+      "  Timing            0.00 (total)\n",
+      "                    0.00 (presolve)\n",
+      "                    0.00 (postsolve)\n",
+      "  Nodes             1\n",
+      "  LP iterations     3 (total)\n",
+      "                    0 (strong br.)\n",
+      "                    0 (separation)\n",
+      "                    0 (heuristics)\n",
       "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mRe-optimizing with integer variables fixed...\n",
+      "Running HiGHS 1.5.1 [date: 1970-01-01, git hash: 93f1876e4]\n",
+      "Copyright (c) 2023 HiGHS under MIT licence terms\n",
+      "Presolving model\n",
+      "8 rows, 10 cols, 19 nonzeros\n",
+      "0 rows, 0 cols, 0 nonzeros\n",
+      "Presolve : Reductions: rows 0(-44); columns 0(-36); elements 0(-96) - Reduced to empty\n",
+      "Solving the original LP from the solution after postsolve\n",
+      "Model   status      : Optimal\n",
+      "Objective value     :  5.6000000000e+03\n",
+      "HiGHS run time      :          0.00\n",
       "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mExtracting solution...\n",
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m        13.328784833s: 13 seconds, 328 milliseconds\n"
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39m        18.365147291s: 18 seconds, 365 milliseconds\n"
      ]
     }
    ],
