--- a/3_RELOG_simulation/0_Folder_generation.ipynb
+++ b/3_RELOG_simulation/0_Folder_generation.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "098a1a46-5e76-4858-920a-6d8bd2d21506",
    "metadata": {},
    "outputs": [],
@@ -53,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "981be564-d465-4e0b-9f68-c4b1497528ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "date = datetime.today().strftime('%Y%m%d')\n",
-    "simulation_name = f'{date}_CASE0_Manufacturing_v1' # This line is the only one that needs to be changed. CASE0 is gthe name and v1 is the version\n",
+    "simulation_name = f'{date}_storage-only-plant-example' # This line is the only one that needs to be changed. CASE0 is gthe name and v1 is the version\n",
     "simulation_whatif = 'what-if_' + simulation_name"
    ]
   },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "2fec549a-7206-4d5f-98d2-fe6b2ffc376d",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "1e2516d1-1e55-4aa8-9ece-6374628f8974",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "4686affb-3fde-4cca-9bca-531979ea8278",
    "metadata": {},
    "outputs": [],
@@ -108,17 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "b3abd86c-8f80-43cb-946a-ab98f1a00769",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230306_CASE0_Manufacturing_v1'"
+       "'/Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230309_storage-only-plant-example'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "3a2d2d95-8d72-40da-9f2c-cd5e1d7bc1e8",
    "metadata": {},
    "outputs": [
@@ -137,12 +137,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/20230306_CASE0_Manufacturing_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/what-if_20230306_CASE0_Manufacturing_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/20230306_CASE0_Manufacturing_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/what-if_20230306_CASE0_Manufacturing_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/20230306_CASE0_Manufacturing_v1 has been created!\n",
-      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230306_CASE0_Manufacturing_v1 has been created!\n"
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/20230309_storage-only-plant-example has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/what-if_20230309_storage-only-plant-example has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/20230309_storage-only-plant-example has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/what-if_20230309_storage-only-plant-example has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/20230309_storage-only-plant-example has been created!\n",
+      "The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230309_storage-only-plant-example has been created!\n"
      ]
     }
    ],
