--- a/2_data_preparation/data_preprocess_1-Manufacturing.ipynb
+++ b/2_data_preparation/data_preprocess_1-Manufacturing.ipynb
@@ -1330,6 +1330,7 @@
     "RELOG requires a file with the recycling plant candidates locations. This dataframe requirtes a column with:\n",
     "* Unique location names\n",
     "* Longitude and latitudes\n",
+    "* Initial capacity (tonne)\n",
     "* Area cost factors (relative to the place where the cost analysis was made).\n",
     "\n",
     "Here I propose three approaches:\n",
@@ -1338,6 +1339,30 @@
     "    - Version 1: When we have the state in the column name.\n",
     "    - Version 2: When we don't have the state defined in the name.\n",
     "3. Create an empty template — see section 3.3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "33029815-25ae-4ee1-8749-03ec2ec4c94a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os,sys\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
+    "import random\n",
+    "import re\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from geopy.geocoders import Nominatim\n",
+    "from geopy.point import Point\n",
+    "# initialize Nominatim API\n",
+    "geolocator = Nominatim(user_agent=\"geoapiExercises\")"
    ]
   },
   {
@@ -1362,28 +1387,6 @@
     "1. Upload the \"Candidate Locations - Battery\" file. \n",
     "2. Since this file does not contain state, it might be useful to change the `name` column as \"nwike's name, city, county, state name\". This is not strictly necessary though, it is just helpful to use for better user experience so the user knows which county belongs to which state.\n",
     "3. Change the area cost factors to the area we are basing our plant cost model. In this case the manufacturing plant is in Ohio."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3661ce1f-2929-4583-8319-dfe09c0e29c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os,sys\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pathlib import Path\n",
-    "import random\n",
-    "import re\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from geopy.geocoders import Nominatim\n",
-    "from geopy.point import Point\n",
-    "# initialize Nominatim API\n",
-    "geolocator = Nominatim(user_agent=\"geoapiExercises\")"
    ]
   },
   {
@@ -2199,7 +2202,19 @@
   {
    "cell_type": "markdown",
    "id": "b5ac0c20-6b14-479f-bc03-beab0fafc955",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "scp -r /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/hpc_simulation_folders/20230315_Recycling_super_v5 mmendez@eagle.nrel.gov:/projects/pvsoiling/RELOG\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15da8255-d00d-4d0d-bb1f-801fab4d8874",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 3.4. IGate-e Candidate Locations"
    ]
@@ -2207,7 +2222,9 @@
   {
    "cell_type": "markdown",
    "id": "4b0cff33-3813-49cd-9088-595f504a9a9a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "These candidate locations are protected data, they can be found locally in `/2_data_preparation/CandidateLocations_RAW`. There are a lot of locations here (>200K). So I am going to filter them."
    ]
