--- a/2_data_preparation/data_preprocess_1-Manufacturing.ipynb
+++ b/2_data_preparation/data_preprocess_1-Manufacturing.ipynb
@@ -4602,6 +4602,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "5223f3d1-4ab2-49dc-8851-7bfc1309b334",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'area_cost_factors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43marea_cost_factors\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'area_cost_factors' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "area_cost_factors"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 222,
    "id": "38fc614d-01b4-481d-b0d8-40c64d305e1c",
    "metadata": {},
