--- a/3_RELOG_simulation/resources/1_Submit Optimization Problem.ipynb
+++ b/3_RELOG_simulation/resources/1_Submit Optimization Problem.ipynb
@@ -242,15 +242,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.2",
-   "language": "julia",
-   "name": "julia-1.8"
+   "display_name": "RICE",
+   "language": "python",
+   "name": "rice"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.8.2"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
