--- a/3_RELOG_simulation/resources/3_Visualize RELOG Results.ipynb
+++ b/3_RELOG_simulation/resources/3_Visualize RELOG Results.ipynb
@@ -1142,9 +1142,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "RELOG",
+   "display_name": "RICE",
    "language": "python",
-   "name": "relog"
+   "name": "rice"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1156,7 +1156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
